--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!--Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anybody:wght@300;400&family=Bungee+Outline&family=Familjen+Grotesk:ital,wght@0,400;1,400;1,600&family=Jacques+Francois+Shadow&family=Londrina+Sketch&family=Orelega+One&family=Tourney:ital,wght@0,400;0,800;1,400&family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
